--- a/src/main/resources/com/example/cs3318_assigment3/view.fxml
+++ b/src/main/resources/com/example/cs3318_assigment3/view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" prefHeight="499.0" prefWidth="458.0" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cs3318_assigment3.HelloController">
+<VBox alignment="CENTER" prefHeight="499.0" prefWidth="458.0" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cs3318_assigment3.Presenter">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
